[package]
name = "proxyko-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.10"
cidr = "0.3"
wildmatch = "2.5"
anyhow = "1.0"
once_cell = "1.21"
env_logger = "0.11"
log = "0.4"
tokio-tungstenite = "0.28"
futures-util = "0.3"
